--- a/ShopMusicProject/ShopMusicProject/appsettings.json
+++ b/ShopMusicProject/ShopMusicProject/appsettings.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": { "DBConn": "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=7484;Encrypt=True;Trust Server Certificate=True;MultipleActiveResultSets=True" }
 }
 /*
-  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=7484;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models
-  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=7484;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force 
-  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=7484;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force  -table ..
+  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models
+  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force 
+  Scaffold-DbContext "Data Source=127.0.0.1;Initial Catalog=ShopCombus;User ID=webproject;Password=;Encrypt=True;Trust Server Certificate=True" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force  -table ..
 */
 /*
     [Compare(nameof(Password), ErrorMessage = "รหัสผ่านไม่ตรงกัน")]
